# concord

./: .envrc  CHANGELOG.md  CMakeLists.txt  Makefile  PLANNING.md  README.md  make  run.sh
cmake/: concordConfig.cmake.in
examples/: builder_pattern_demo.cpp  main.cpp  structure_test.cpp  template_builder_demo.cpp  test_precision.cpp
include/: wgs_to_enu.hpp  wgs_to_utm.hpp
include/concord/: concord.hpp  types.hpp  types_basic.hpp  types_circle.hpp  types_grid.hpp  types_line.hpp  types_path.hpp  types_polygon.hpp  types_rectangle.hpp  types_square.hpp  wgs_to_enu.hpp
include/concord/algorithms/: spatial_algorithms.hpp
include/concord/algorithms/convex_hull/: convex_hull.hpp
include/concord/algorithms/distance/: distance.hpp
include/concord/algorithms/intersection/: intersection.hpp
include/concord/algorithms/triangulation/: triangulation.hpp
include/concord/builders/: coordinate_builder.hpp  geometry_builder.hpp  spatial_builder.hpp
include/concord/core/: constants.hpp  coordinate_systems.hpp  coordinate_utils.hpp  types.hpp  types_basic.hpp  wgs_to_enu.hpp  wgs_to_utm.hpp
include/concord/core/types/: bound.hpp  crs.hpp  ecef.hpp  enu.hpp  euler.hpp  ltp.hpp  point.hpp  pose.hpp  quaternion.hpp  size.hpp  types.hpp  utm.hpp  wgs.hpp
include/concord/errors/: error_handling.hpp
include/concord/geographic/: coordinate_utils.hpp  wgs_to_utm.hpp
include/concord/geographic/crs/: crs.hpp  datum.hpp  ecef.hpp  enu.hpp  ltp.hpp  utm.hpp  wgs.hpp
include/concord/geographic/projections/: projections.hpp
include/concord/geographic/transformations/: transformations.hpp
include/concord/geometry/: bounding.hpp  circle.hpp  line.hpp  path.hpp  rectangle.hpp  square.hpp  types_bounding.hpp  types_circle.hpp  types_grid.hpp  types_line.hpp  types_path.hpp  types_polygon.hpp  types_rectangle.hpp  types_square.hpp
include/concord/geometry/grid/: grid.hpp
include/concord/geometry/polygon/: partition.hpp  partitioner.hpp  polygon.hpp
include/concord/geometry/primitives/: circle.hpp  line.hpp  primitives.hpp  rectangle.hpp  square.hpp
include/concord/indexing/: indexing.hpp
include/concord/indexing/hash_grid/: hash_grid.hpp  spatial_hash_grid.hpp
include/concord/indexing/quadtree/: quadtree.hpp
include/concord/indexing/rtree/: rtree.hpp
include/concord/io/: utilities.hpp
include/concord/math/: math.hpp  types_math.hpp
include/concord/spatial/: spatial_algorithms.hpp  spatial_index.hpp
test/: test_builder_pattern.cpp  test_concord.cpp  test_coordinates.cpp  test_geometry.cpp  test_math.cpp  test_partitioner.cpp  test_spatial.cpp
